@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sniffy-parent</artifactId>
         <groupId>io.sniffy</groupId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -47,6 +47,20 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>animal-sniffer-maven-plugin</artifactId>
+                <configuration>
+                    <ignores>
+                        <ignore>sun.security.jca.ProviderList</ignore>
+                    </ignores>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
 
         <profile>
@@ -62,12 +76,12 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
                             <compilerArgs>
-                                <arg>--add-exports=java.base/sun.security.jca=ALL-UNNAMED</arg>
+                                <arg>-XDignore.symbol.file</arg>
                             </compilerArgs>
-                            <source>1.9</source>
-                            <target>1.9</target>
-                            <testSource>1.9</testSource>
-                            <testTarget>1.9</testTarget>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                            <testSource>1.8</testSource>
+                            <testTarget>1.8</testTarget>
                         </configuration>
                     </plugin>
                 </plugins>
